<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Nytt i Appen">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/poll_nav"
                    android:icon="@drawable/riksdagskollen_logo_small"
                    android:title="Opinionsmätningar" />
            </group>
        </menu>

    </item>

    <item android:title="@string/in_gov">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/news_nav"
                    android:icon="@drawable/riksdagskollen_logo_small"
                    android:title="@string/news" />
                <item
                    android:id="@+id/dec_nav"
                    android:icon="@drawable/betlogo"
                    android:title="@string/decisions" />
                <item
                    android:id="@+id/debate_nav"
                    android:icon="@drawable/protlogo"
                    android:title="@string/debate_nav" />
                <item
                    android:id="@+id/votes_nav"
                    android:icon="@drawable/votlogo"
                    android:title="@string/votes" />
                <item
                    android:id="@+id/rep_nav"
                    android:icon="@drawable/replogo"
                    android:title="@string/representatives" />
                <item
                    android:id="@+id/prot_nav"
                    android:icon="@drawable/ic_protocol"
                    android:title="@string/prot" />
            </group>
        </menu>

    </item>

    <item
        android:title="@string/parties"
        android:checkableBehavior="single">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/s_nav"
                    android:icon="@drawable/slogo"
                    android:title="@string/party_s" />
                <item
                    android:id="@+id/m_nav"
                    android:icon="@drawable/mlogo"
                    android:title="@string/party_m" />
                <item
                    android:id="@+id/sd_nav"
                    android:icon="@drawable/sdlogo"
                    android:title="@string/party_sd" />
                <item
                    android:id="@+id/c_nav"
                    android:icon="@drawable/clogo"
                    android:title="@string/party_c" />
                <item
                    android:id="@+id/v_nav"
                    android:icon="@drawable/vlogo"
                    android:title="@string/party_v" />
                <item
                    android:id="@+id/kd_nav"
                    android:icon="@drawable/kdlogo"
                    android:title="@string/party_kd" />
                <item
                    android:id="@+id/l_nav"
                    android:icon="@drawable/llogo"
                    android:title="@string/party_l" />
                <item
                    android:id="@+id/mp_nav"
                    android:icon="@drawable/mplogo"
                    android:title="@string/party_mp" />

            </group>
        </menu>
    </item>


    <item android:title="@string/misc">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/search_nav"
                    android:icon="@drawable/ic_search2"
                    android:title="@string/search_nav" />
                <item
                    android:id="@+id/twitter_nav"
                    android:icon="?twitterLogo"
                    android:title="@string/twitter_nav"
                    android:visible="false" />

                <item
                    android:id="@+id/saved_docs"
                    android:icon="@drawable/ic_star_yellow"
                    android:title="@string/saved_docs" />
                <item
                    android:id="@+id/feedback_nav"
                    android:icon="@drawable/ic_menu_message"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/about_nav"
                    android:icon="@drawable/ic_baseline_info_accent24px"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>
