<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include layout="@layout/loading_view" />

    <include
        layout="@layout/no_internet_view"
        android:id="@+id/no_connection_warning"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refreshLayout">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideOverlay"
            android:descendantFocusability="blocksDescendants"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="?buttonColor"
            android:id="@+id/no_content_warning"
            android:text="Det verkar inte finnas något här. \n Testa att ändra dina filterinställningar" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>