...
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/show_audio_player_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
...
